# spotivy

./: .gitmodules  CMakeLists.txt  README.md  documentation.sh  init.sh  makefile
docs/: class_diagram.wsd  makefile  usecase_diagram.wsd
doxygen/: Doxyfile.in  doxygen.cmake
doxygen/html/: header.html
include/: debug_client.h
include/controller/: music.h
include/driver/: audio_base.h  audio_wav.h
include/model/: album.h  artist.h  playlist.h  queue.h  song.h  song_list_base.h
include/view/: main.h
include/view/component/: audio_controls.h  base.h  image.h
src/: debug_client.cpp  example.cpp  main.cpp
src/controller/: music.cpp
src/driver/: audio_base.cpp  audio_wav.cpp
src/model/: album.cpp  artist.cpp  playlist.cpp  queue.cpp  song.cpp  song_list_base.cpp
src/view/: main.cpp
src/view/component/: audio_controls.cpp  base.cpp
test/model/: album.cpp  queue.cpp  song.cpp
